RESOLVED FIXED275485
[WPE][GTK] Bubblewrap sandbox should not kill auxiliary process when UI process terminates
https://bugs.webkit.org/show_bug.cgi?id=275485
Summary [WPE][GTK] Bubblewrap sandbox should not kill auxiliary process when UI proce...
Michael Catanzaro
Reported 2024-06-14 07:56:29 PDT
The bubblewrap sandbox should not kill auxiliary processes when the UI process terminates. Instead, let the child process terminate cleanly. The idea here is to match the behavior of unsandboxed WebKit and flatpaked WebKit and reduce the odds of bugs going unnoticed. This will allow exit handlers to run; notably, EGL termination has historically been a source of crashes. This will also avoid subverting the purpose of the watchdog thread that crashes the web process 10 seconds after the UI process exits.
Attachments
Michael Catanzaro
Comment 1 2024-06-14 08:49:55 PDT
EWS
Comment 2 2024-06-16 05:43:57 PDT
Committed 280061@main (5d324a1c159c): <https://commits.webkit.org/280061@main> Reviewed commits have been landed. Closing PR #29825 and removing active labels.
Michael Catanzaro
Comment 3 2024-07-01 07:39:52 PDT
Carlos Garcia discovered this doesn't actually work. I didn't actually test to ensure the web process would actually shut down cleanly.
Michael Catanzaro
Comment 4 2024-07-01 10:19:32 PDT
Sorry, I misunderstood. Carlos is saying it works for GTK but not for WPE. That seems extremely strange, though.
Note You need to log in before you can comment on or make changes to this bug.