[WPE][GTK] Bubblewrap sandbox should not kill auxiliary process when UI process terminates https://bugs.webkit.org/show_bug.cgi?id=275485

Reviewed by Carlos Garcia Campos.

The bubblewrap sandbox should not kill auxiliary processes when the UI
process terminates. Instead, let the child process terminate cleanly.
The idea  here is to match the behavior of unsandboxed WebKit and
flatpaked WebKit and reduce the odds of bugs going unnoticed. This will
allow exit handlers to run; notably, EGL termination has historically
been a source of crashes. This will also avoid subverting the purpose of
the watchdog thread that crashes the web porecss 10 seconds after the UI
process exits.

The problem is bwrap will SIGKILL the child process immediately,
preventing it from doing usual cleanup.

* Source/WebKit/UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bubblewrapSpawn):

Canonical link: https://commits.webkit.org/280061@main